Cycles - Output sockets and connections are not shown #60263

Closed
opened 2019-01-07 11:34:55 +01:00 by Marcus Papathoma · 10 comments

System Information
Operating system: Windows 10 Pro x64
Graphics card: Geforce 1080Ti

Blender Version
Broken: 2.80, 96f762500e, 2019-01-07, as found on the splash screen)

Short description of error
Output Sockets and Connections not shown

Exact steps for others to reproduce the error
Open the attached Scene
In the compositing view on the bottom you can´t see the output sockets of the Render Layers and it´s connections.
In the properties on the right uncheck combined under Data. The output sockets und connections are appearing.
Output_Connections.blend

**System Information** Operating system: Windows 10 Pro x64 Graphics card: Geforce 1080Ti **Blender Version** Broken: 2.80, 96f762500ef9, 2019-01-07, as found on the splash screen) **Short description of error** Output Sockets and Connections not shown **Exact steps for others to reproduce the error** Open the attached Scene In the compositing view on the bottom you can´t see the output sockets of the Render Layers and it´s connections. In the properties on the right uncheck combined under Data. The output sockets und connections are appearing. [Output_Connections.blend](https://archive.blender.org/developer/F6208709/Output_Connections.blend)

Added subscriber: @machieb

Added subscriber: @machieb
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm in this file, but cannot find steps to reproduce...
@machieb : Do you know how you got to this state?
(this might be related to recent render pass cleanup 2c196de56b, c07ae0e821, a4e4d9f0ab)

reg. the "solution": doesnt have to be "Combined", just clicking anything in Passes (guess anything that calls rna_ViewLayer_pass_update) will update [and then display correctly...]

Can confirm in this file, but cannot find steps to reproduce... @machieb : Do you know how you got to this state? (this *might* be related to recent render pass cleanup 2c196de56b, c07ae0e821, a4e4d9f0ab) reg. the "solution": doesnt have to be "Combined", just clicking anything in Passes (guess anything that calls `rna_ViewLayer_pass_update`) will update [and then display correctly...]

I created the scene a few weeks ago with an older Bleder beta version. Which exactly I don´t know.
Saving and reopening this scene with the Blender version from today isn´t solving the problem.

I created the scene a few weeks ago with an older Bleder beta version. Which exactly I don´t know. Saving and reopening this scene with the Blender version from today isn´t solving the problem.

Deleting the Render Layers and File Output node and recreating the connections, then saving the file, helps to get rid of the problem.
When reopening the file, the connections and sockets are shown.
Maybe because of the many changes in Blender, it can´t be reproduces how I came to the state of the file.
I think you can close the ticket?!

Deleting the Render Layers and File Output node and recreating the connections, then saving the file, helps to get rid of the problem. When reopening the file, the connections and sockets are shown. Maybe because of the many changes in Blender, it can´t be reproduces how I came to the state of the file. I think you can close the ticket?!
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Jacques Lucke self-assigned this 2019-01-08 12:54:06 +01:00
Member

Closing as this can't be reproduced apparently. Guessing it was some bug in an older Blender beta build.

Closing as this can't be reproduced apparently. Guessing it was some bug in an older Blender beta build.

This issue was referenced by 152c965b75

This issue was referenced by 152c965b75f3ccc3b50301555cb9b1a2ee679193

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60263
No description provided.