Fix T60263: render layer node sockets not showing on file load, for some files.